# graph_agentic_platform

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements_for_sandbox.txt
agents/lm_studio_test/: agent.py
agents/lm_studio_test/.adk/: session.db
agents/python_executor/: agent.py  tools.py
client/: components.json  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts
client/app/: globals.css  layout.tsx  page.tsx  styles.scss
client/app/actions/: comments.ts  posts.ts  profile.ts  search.ts
client/app/ai/: page.tsx
client/app/auth/: layout.tsx  page.tsx
client/app/create/: page.tsx  styles.scss
client/app/dashboard/: page.tsx  profile-card.tsx
client/app/read/: page.tsx  search-bar.tsx
client/app/read/[slug]/: author-controls.tsx  comment-section.tsx  page.tsx
client/app/test/: page.tsx  styles.scss
client/app/viewer/[slug]/: page.tsx
client/app/write/: page.tsx  styles.scss
client/components/: login.tsx  logo.tsx  navbar.tsx
client/components/blocks/: editor.tsx  mode-toggle.tsx
client/components/markdown/: copy-button.tsx  renderer.tsx
client/components/ui/: textarea.tsx
client/drizzle/: 0000_fluffy_magdalene.sql  relations.ts  schema.ts
client/drizzle/meta/: 0000_snapshot.json  _journal.json
client/src/db/: schema.ts
